# nemo-lang

./: .gitignore  Cargo.toml  README.md  example.nemo  index.html  iterator.nemo  justfile  play.nemo  poly.nemo  program.wasm  rope.wast  rust-toolchain.toml  strings.md  strings.wast  variants.nemo
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: lib.rs
crates/cli/tests/check/: arg_count_mismatch.nemo  cant_infer_empty_array.nemo  cant_infer_lambda.nemo  cant_instantiate_function_ref.nemo  cant_reassign_captured_variable.nemo  cant_return_from_global.nemo  field_type_mismatch.nemo  lambda.nemo  missing_field.nemo  non_array_idx.nemo  non_function_import.nemo  not_a_function.nemo  operator_type_mismatch.nemo  pattern_type_mismatch.nemo  return_type_mismatch.nemo  tuples.nemo  ty_arg_count_mismatch.nemo  type_mismatch.nemo  unknown_alternative.nemo  unknown_field.nemo  unknown_module.nemo  unknown_struct.nemo
crates/cli/tests/passing/: arithmetic.nemo
crates/cli/tests/run/: arithmetic.nemo  arrays.nemo  block.nemo  builtins.nemo  closures.nemo  decl.nemo  divide_by_zero.nemo  expr_postfix.nemo  if.nemo  infix_op.nemo  literals.nemo  modules.nemo  panic.nemo  poly.nemo  return.nemo  structs.nemo  toplevels.nemo  tuples.nemo  unary_op.nemo  variants.nemo
crates/cli/tests/snapshots/: check@arg_count_mismatch.nemo.snap  check@cant_infer_empty_array.nemo.snap  check@cant_infer_lambda.nemo.snap  check@cant_infer_type_param.nemo.snap  check@cant_instantiate_function_ref.nemo.snap  check@cant_reassign_captured_variable.nemo.snap  check@cant_return_from_global.nemo.snap  check@cycle.snap  check@duplicate_module_name.snap  check@field_type_mismatch.nemo.snap  check@invalid_literal.nemo.snap  check@lambda.nemo.snap  check@missing_field.nemo.snap  check@non_array_idx.nemo.snap  check@non_function_import.nemo.snap  check@non_struct_idx.nemo.snap  check@not_a_function.nemo.snap  check@operator_type_mismatch.nemo.snap  check@pattern_type_mismatch.nemo.snap  check@return_type_mismatch.nemo.snap  check@ty_arg_count_mismatch.nemo.snap  (+159 more)
crates/frontend/: Cargo.toml
crates/frontend/src/: builtins.rs  error.rs  highlight.rs  ir.rs  lexer.rs  lib.rs  module_dag.rs  parser.rs  scheduler.rs  scip.rs  syntax.rs  types.rs
crates/frontend/tests/: lib.rs  parser.rs
(+269 files in other folders)
