[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nemo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
frontend = { path = "../frontend" }
backend = { path = "../backend" }
language-server = { path = "../language-server" }
camino = "1.1.9"

[dev-dependencies]
insta = { version = "1.34.0", features = ["glob", "filters"] }
insta-cmd = "0.6.0"
