[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ariadne = "0.4.1"
yansi = "1"
logos = "0.14.0"
num-derive = "0.4.2"
num-traits = "0.2.18"
rowan = "0.15.15"
text-size = "1.1.1"
line-index = "0.1.1"
lexpr = "0.2.7"
derive_ir = { path = "../derive_ir" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["glob"] }
