[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ariadne = { version = "0.5", features = ["auto-color"] }
yansi = "1"
logos = "0.15"
num-derive = "0.4.2"
num-traits = "0.2.18"
rowan = "0.16"
text-size = "1.1.1"
line-index = "0.1.1"
lexpr = "0.2.7"
derive_ir = { path = "../derive_ir" }
string-interner = "0.19"
topological-sort = "0.2.2"
camino = "1.1.9"
